 - Add timer and alarm for cpancover.
 - Add Report Date to basic html report.
 - Quieten some warnings.
 - Document cover -test.
 - Get rid of any __DIE__and __WARN__ signals during the report.
 - Don't try to get a digest for "-e".
 - Tidy up filename normalisation.
 - Be more explicit about what I mean when I call this alpha software.
 - Add uncoverable comments.

Release 0.61 - 10th January 2007
 - Fix some "ignored" errors due to multiple subs of the same name on the same
   line (rt 14192).
 - Display pod coverage with subroutine coverage in text report.
 - Update golden output (tests were failing in 0.60).

Release 0.60 - 2nd January 2007
 - Simplify get_key function and remove TODO item (Gisle Aas).
 - Be careful with UNC paths on Windows (John LoVerso) (rt 24105).
 - Only call HvSHAREKEYS_off if threading is enabled.
 - s/unvailable/unavailable/ (Jim Cromie).
 - Don't key on op_targ - it might change (rt 22701).
 - Tidy up docs and error messages for reports (rt 21098).
 - Better database validation.
 - Don't delete invalid datbases (rt 16039).
 - Tested against 5.9.5.
 - Allow for new anonlist and anonhash ops (rt 24067).
 - Use outputfile for both cover and cpancover.
 - Add compilation report (Denis Howe).

Release 0.59 - 23rd August 2006
 - Tidy up HTML, especially for cpancover.
 - Allow coverage of subroutine statements in a different file (as with Mason)
   (clkao).
 - Bump refcount on subs to ensure they stay around for us to look at them
   (yes, this is a hack).

Release 0.58 - 6th August 2006
 - Be more clever about void context and so avoid SvROK hack.
 - Document some bugs, limitations and requirements.
 - HTML alignment fix (Sébastien Aperghis-Tramoni).
 - CSS improvements for HTML reports (Sébastien Aperghis-Tramoni).

Release 0.57 - 3rd August 2006
 - Report Pod::Coverage load failure (dom - happygiraffe.net) (rt 14425).
 - Use Perl::Tidy as an alternative syntax highlighter
   (Sébastien Aperghis-Tramoni).